# Selection-Assistance

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py  prompts.py  router.py  router_engine.py  schemas.py
backend/app/services/: __init__.py  chat.py  deepseek.py  explain.py  phonetics.py  qwen_vl.py  translate.py  vision.py
backend/tests/: conftest.py  test_chat.py  test_phonetics.py  test_router.py  test_translate.py  test_vision.py
docs/: xiaohongshu_copy.md
frontend/: .gitignore  README.md  actionButton.html  index.html  package-lock.json  package.json  popup.html  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
frontend/electron/: backend.ts  ipc.ts  main.ts  preload.ts  selection.ts  windows.ts
frontend/src/: actionButton.tsx  env.d.ts  main.tsx  popup.tsx
frontend/src/components/: ErrorBanner.tsx  MessageList.tsx  PhoneticsBar.tsx  PopupView.tsx  ResultPane.tsx  ThinkingPanel.tsx
frontend/src/hooks/: useSelectionAction.ts
frontend/src/lib/: api.ts  markdown.ts  sse.ts  types.ts
frontend/src/styles/: index.css
frontend/tests/: api.test.ts  markdown.test.ts  sse.test.ts
